--- a/modules/ROOT/pages/_attributes.adoc
+++ b/modules/ROOT/pages/_attributes.adoc
@@ -1,2 +1,1 @@
-:username: user55
-:url-peak: https://www.google.com/maps/place/Antora+Peak/@38.3249976,-106.2355882,14z/data=!3m1!4b1!4m5!3m4!1s0x871572433f469bd7:0xd2bdf15e615cd269!8m2!3d38.3249994!4d-106.2180786!5m1!1e4 
+:experimental: true
